@@ -7,7 +7,7 @@
 
 open Printf;;
 
-let version = "7.00-exp";;
+let version = "7.00";;
 let syntax_name = ref "";;
 
 let gram =
@@ -20,8 +20,11 @@ let gram =
 ;;
 
 (*
-Camlp5 can be parsed with backtracking:
+Camlp5 can be parsed with limited or full backtracking:
+Grammar.set_algorithm gram Grammar.Functional;
 Grammar.set_algorithm gram Grammar.Backtracking;
+or without any change in the code, by setting the environment
+variable CAMLP5PARAM to f or b.
 *)
 
 type status = Ploc.t option;;
